--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,10 +1,10 @@
-include *.txt
-include *.rst
-include setup.py
-include setup.cfg
+include LICENSE*
 include pavement.py
 include paver-minilib.zip
-
+include TODO*
+include distribute_setup.py
+include CHANGES*
+include README*
+include setup.py
 recursive-include docs *
 prune docs/_build
-
