--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,10 +1,9 @@
+grant docs
 include LICENSE*
 include pavement.py
 include paver-minilib.zip
 include TODO*
-include distribute_setup.py
 include CHANGES*
 include README*
 include setup.py
-recursive-include docs *
 prune docs/_build
