--- a/tox.ini
+++ b/tox.ini
@@ -7,59 +7,30 @@ setenv=
 	PYTHONPATH=
 changedir=tests
 
-commands=nosetests
-
-[testenv:py25]
+commands=
+	python --version
+	nosetests -v test_core test_with
+	
 deps=
       nose
       #pyscreenshot
       #PIL
+	  #wxPython
+	  #pygtk
+	  #pyqt
+	  
+[testenv:py25]
 commands=
-	nosetests -v test_core
 	python --version
+	nosetests -v test_core
 
 [testenv:py26]
-deps=
-      nose
-      pyscreenshot
-      PIL
-commands=
-	nosetests -v
-	python --version
 
 [testenv:py27]
-deps=
-      nose
-      pyscreenshot
-      PIL
-commands=
-	nosetests -v
-	python --version
 
 [testenv:py31]
-deps=
-      nose
-      #pyscreenshot
-      #PIL
-commands=
-	nosetests -v test_core test_with
-	python --version
 
 [testenv:py32]
-deps=
-      nose
-      #pyscreenshot
-      #PIL
-commands=
-	nosetests -v test_core test_with
-	python --version
 	
 [testenv:pypy]
-deps=
-      nose
-      #pyscreenshot
-      #PIL
-commands=
-	nosetests -v test_core test_with
-	python --version
 	
