--- a/tox.ini
+++ b/tox.ini
@@ -3,14 +3,14 @@
 envlist = py25,py26,py27,py31,py32,pypy
 
 [testenv]
-setenv=
-	PYTHONPATH=
+#setenv=
+#	PYTHONPATH=
 changedir=tests
 
 commands=
 	python --version
 	nosetests -v test_core test_with
-	
+
 deps=
       nose
       #pyscreenshot
@@ -18,7 +18,7 @@ deps=
 	  #wxPython
 	  #pygtk
 	  #pyqt
-	  
+
 [testenv:py25]
 commands=
 	python --version
@@ -31,6 +31,5 @@ commands=
 [testenv:py31]
 
 [testenv:py32]
-	
+
 [testenv:pypy]
-	
