--- a/tox.ini
+++ b/tox.ini
@@ -1,35 +1,16 @@
 
 [tox]
-envlist = py26,py27,py32,py33
+envlist = py26,py27,py33,py34,py35
 
 [testenv]
-#setenv=
-#	PYTHONPATH=
 changedir=tests
 
-commands=
-	python --version
-	nosetests -v test_core test_with
+commands= nosetests -v .
+# test_core test_with
 
 deps=
       nose
-      #pyscreenshot
-      #PIL
-	  #wxPython
-	  #pygtk
-	  #pyqt
-
-[testenv:py25]
-commands=
-	python --version
-	nosetests -v test_core
-
-[testenv:py26]
-
-[testenv:py27]
-
-[testenv:py31]
-
-[testenv:py32]
-
-[testenv:pypy]
+      pyscreenshot
+      pillow
+	  entrypoint2
+	  path.py
