--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -y xvfb xserver-xephyr python-pil scrot zenity gnumeric x11-utils x11-apps
+  - sudo apt-get install -y xvfb xserver-xephyr scrot zenity gnumeric x11-utils x11-apps
 
 install:
  - pip install coveralls
@@ -16,7 +16,9 @@ install:
  - pip install --upgrade .
  
 script:  
- - cd tests && nosetests -v --with-coverage --cover-package=pyvirtualdisplay .
+ - xauth add :0 . `mcookie`
+ - cd tests 
+ - nosetests -v --with-coverage --cover-package=pyvirtualdisplay .
  
 after_success:
  - coveralls
