--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,11 @@
 
 [tox]
-envlist = py27,py35,py36,py37
+envlist = 
+      py27
+      py35
+      py36
+      py37
+      py38
 
 [testenv]
 changedir=tests
