test: switch from nose to pytest

--- a/.travis.yml
+++ b/.travis.yml
@@ -62,7 +62,5 @@ install:
 
 script:
   - cd tests
-  - nosetests -v --with-coverage --cover-package=pyvirtualdisplay .
+  - pytest -v .
 
-after_success:
-  - coveralls
