--- a/tox.ini
+++ b/tox.ini
@@ -10,12 +10,11 @@ envlist =
 [testenv]
 changedir=tests
 
-commands= nosetests -v .
-# test_core test_with
+commands= pytest -v .
 
 deps=
-      nose
+      pytest
       pyscreenshot
       pillow
-	  entrypoint2
-	  path.py
+	entrypoint2
+	path.py
