--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,10 @@ envlist =
       py37
       py38
 
+# Workaround for Vagrant
+#toxworkdir={toxinidir}/.tox # default
+toxworkdir={homedir}/.tox/pyscreenshot
+
 [testenv]
 changedir=tests
 
