--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,10 +1,2 @@
-graft docs
 include LICENSE*
-include pavement.py
-include TODO*
-include requirements.txt
-include versioneer.py
-include CHANGES*
-include README*
-include setup.py
-prune docs/_build
+recursive-include tests *.py
