test vagrant osx

--- a/tox.ini
+++ b/tox.ini
@@ -21,3 +21,14 @@ deps=
       pyscreenshot
       pillow
 	path.py
+
+[testenv:py3-osx]
+changedir=tests
+deps=
+      pytest
+      pillow
+      path.py
+      python-xlib
+
+commands=
+      {envpython} -m pytest -v .
