--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ envlist =
 
 # Workaround for Vagrant
 #toxworkdir={toxinidir}/.tox # default
-toxworkdir={homedir}/.tox/pyscreenshot
+toxworkdir={homedir}/.tox/pyvirtualdisplay
 
 [testenv]
 changedir=tests
