--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,8 @@ toxworkdir={homedir}/.tox/pyvirtualdisplay
 [testenv]
 changedir=tests
 
-commands= pytest -v .
+commands= 
+      {envpython} -m pytest -v .
 
 deps=
       pytest
