--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,7 @@ deps=
       pyscreenshot
       pillow
 	path.py
+      entrypoint2
 
 [testenv:py3-osx]
 changedir=tests
@@ -28,6 +29,7 @@ deps=
       pytest
       pillow
       path.py
+      entrypoint2
 
 commands=
       {envpython} -m pytest -v .
