--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,8 @@ deps=
       pillow
 	path.py
       entrypoint2
+      vncdotool==0.13.0
+      backports.tempfile
 
 [testenv:py3-osx]
 changedir=tests
@@ -30,6 +32,8 @@ deps=
       pillow
       path.py
       entrypoint2
+      vncdotool==0.13.0
+      backports.tempfile
 
 commands=
       {envpython} -m pytest -v .
