tox: deps = -rrequirements-test.txt

--- a/tox.ini
+++ b/tox.ini
@@ -16,24 +16,11 @@ changedir=tests
 commands= 
       {envpython} -m pytest -v .
 
-deps=
-      pytest
-      pyscreenshot
-      pillow
-	path.py
-      entrypoint2
-      vncdotool==0.13.0
-      backports.tempfile
+deps = -rrequirements-test.txt
 
 [testenv:py3-osx]
 changedir=tests
-deps=
-      pytest
-      pillow
-      path.py
-      entrypoint2
-      vncdotool==0.13.0
-      backports.tempfile
+deps = -rrequirements-test.txt
 
 commands=
       {envpython} -m pytest -v .
