readme update + generate

--- a/tox.ini
+++ b/tox.ini
@@ -24,3 +24,11 @@ deps = -rrequirements-test.txt
 
 commands=
       {envpython} -m pytest -v .
+
+
+[testenv:py3-doc]
+changedir=doc
+deps = -rrequirements-test.txt
+
+commands=
+      {envpython} generate-doc.py --debug
