--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,10 @@ matrix:
       python: 3.8
       dist: bionic
 
+    - name: 3.8_focal
+      python: 3.8
+      dist: focal
+
     - name: "Python 3.7 on macOS"
       os: osx
       osx_image: xcode11.2 # Python 3.7.4 running on macOS 10.14.4
