--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,8 @@ envlist =
       py36
       py37
       py38
+      py39
+      py3-doc
 
 # Workaround for Vagrant
 #toxworkdir={toxinidir}/.tox # default
