test: PYVIRTUALDISPLAY_NO_DISPLAYFD env var

--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ toxworkdir={homedir}/.tox/pyvirtualdisplay
 
 [testenv]
 changedir=tests
-
+passenv=PYVIRTUALDISPLAY_NO_DISPLAYFD
 commands= 
       {envpython} -m pytest -v .
 
@@ -21,6 +21,7 @@ deps = -rrequirements-test.txt
 
 [testenv:py3-osx]
 changedir=tests
+passenv=PYVIRTUALDISPLAY_NO_DISPLAYFD
 deps = -rrequirements-test.txt
 
 commands=
