--- a/.travis.yml
+++ b/.travis.yml
@@ -13,27 +13,9 @@ addons:
 
 matrix:
   include:
-    - name: 2.7_trusty
-      python: 2.7
-      dist: trusty
-      addons:
-        apt:
-          packages:
-            - *ubu_deps
-            - vnc4server
-
     - name: 3.6_trusty
       python: 3.6
       dist: trusty
-      addons:
-        apt:
-          packages:
-            - *ubu_deps
-            - vnc4server
-
-    - name: 2.7_xenial
-      python: 2.7
-      dist: xenial
       addons:
         apt:
           packages:
@@ -66,15 +48,6 @@ matrix:
           packages:
             - *ubu_deps
             - vnc4server
-
-    - name: 2.7_bionic
-      python: 2.7
-      dist: bionic
-      addons:
-        apt:
-          packages:
-            - *ubu_deps
-            - tigervnc-standalone-server
 
     - name: 3.7_bionic
       python: 3.7
@@ -129,7 +102,7 @@ matrix:
 
 
 install:
-  - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then PYTHON=python; else PYTHON=python3; fi
+  - PYTHON=python3
   - if [ ${TRAVIS_OS_NAME} == "windows" ]; then PYTHON=python; fi
   - $PYTHON -m pip install $PIPUSER --upgrade -r requirements-test.txt
   - $PYTHON -m pip install $PIPUSER --upgrade .
