travis: add no_displayfd config

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,12 @@ matrix:
       python: 3.9
       dist: focal
 
+    - name: 3.9_focal_no_displayfd
+      python: 3.9
+      dist: focal
+      env:
+        - PYVIRTUALDISPLAY_DISPLAYFD=0
+
     - name: "Python 3.7 on macOS"
       os: osx
       osx_image: xcode11.2 # Python 3.7.4 running on macOS 10.14.4
