test: add 18.04 with more ram

--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,11 @@ toxworkdir={homedir}/.tox/pyvirtualdisplay
 [testenv]
 changedir=tests
 passenv=PYVIRTUALDISPLAY_DISPLAYFD
+#whitelist_externals = killall
+#commands_pre= 
+#      - killall Xvfb 
+#      - killall Xephyr
+#      - killall Xvnc
 commands= 
       {envpython} -m pytest -v .
 
