--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,16 +57,13 @@ jobs:
         Xvfb -help
     - name: pip install
       run: |
-        python -m pip install flake8 pytest
         python -m pip install .
         pip install -r requirements-test.txt
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
         cd tests
         pytest -v .
+    - name: Lint
+      if: matrix.os == 'ubuntu-20.04'
+      run: |
+        ./lint.sh
