--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,8 @@ envlist =
       py38
       py37
       py36
+      py3-doc
+      py3-lint
 
 # Workaround for Vagrant
 #toxworkdir={toxinidir}/.tox # default
@@ -34,8 +36,19 @@ commands=
 
 
 [testenv:py3-doc]
+allowlist_externals=bash
 changedir=doc
+deps = 
+      -rrequirements-doc.txt
+
+commands=
+      bash -c "cd ..;./format-code.sh"
+      {envpython} generate-doc.py --debug
+
+[testenv:py3-lint]
+allowlist_externals=bash
+changedir=.
 deps = -rrequirements-test.txt
 
 commands=
-      {envpython} generate-doc.py --debug
+      bash -c "./lint.sh"
