--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,7 @@ jobs:
     - name: Install Linux dependencies
       if: startsWith(matrix.os, 'ubuntu')
       run: |
+        sudo apt-get update
         sudo apt-get install -y tigervnc-standalone-server xserver-xephyr gnumeric x11-utils x11-apps xfonts-base
     - name: Install MacOS dependencies
       if: startsWith(matrix.os, 'macos')
