--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
       if: startsWith(matrix.os, 'ubuntu')
       run: |
         sudo apt-get update
-        sudo apt-get install -y tigervnc-standalone-server xserver-xephyr gnumeric x11-utils x11-apps xfonts-base
+        sudo apt-get install -y tigervnc-standalone-server xserver-xephyr gnumeric x11-utils
     - name: Install MacOS dependencies
       if: startsWith(matrix.os, 'macos')
       run: |
