--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,11 +16,13 @@ jobs:
       matrix:
         os: 
           - "ubuntu-18.04"
+          - "ubuntu-22.04"
           - "macos-10.15"
           - "macos-11"
         python-version: 
           - "3.9"
           - "3.10"
+          # - "3.11-dev"
         include:
           - python-version: "3.6"
             os: ubuntu-20.04
@@ -32,6 +34,8 @@ jobs:
             os: ubuntu-20.04
           - python-version: "3.10"
             os: ubuntu-20.04
+          # - python-version: "3.11-dev"
+          #   os: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
