--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         python-version: 
           - "3.9"
           - "3.10"
-          # - "3.11-dev"
+          - "3.11-dev"
         include:
           - python-version: "3.6"
             os: ubuntu-20.04
@@ -34,8 +34,8 @@ jobs:
             os: ubuntu-20.04
           - python-version: "3.10"
             os: ubuntu-20.04
-          # - python-version: "3.11-dev"
-          #   os: ubuntu-20.04
+          - python-version: "3.11-dev"
+            os: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
