--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,12 @@
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
+# For more information see: 
+#  https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
 name: Python package
 
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '30 5 1 * *'
+    - cron:  '30 5 1 */3 *'
   push:
   pull_request:
 jobs:
@@ -15,14 +16,13 @@ jobs:
       fail-fast: false
       matrix:
         os: 
-          - "ubuntu-18.04"
           - "ubuntu-22.04"
-          - "macos-10.15"
           - "macos-11"
+          - "macos-12"
         python-version: 
           - "3.9"
           - "3.10"
-          - "3.11-dev"
+          - "3.11"
         include:
           - python-version: "3.6"
             os: ubuntu-20.04
@@ -34,12 +34,12 @@ jobs:
             os: ubuntu-20.04
           - python-version: "3.10"
             os: ubuntu-20.04
-          - python-version: "3.11-dev"
+          - python-version: "3.11"
             os: ubuntu-20.04
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install Linux dependencies
@@ -54,9 +54,9 @@ jobs:
         # https://docs.github.com/en/actions/learn-github-actions/workflow-commands-for-github-actions#adding-a-system-path
         echo "/opt/X11/bin" >> $GITHUB_PATH  
         # https://github.com/ponty/PyVirtualDisplay/issues/42
-        mkdir /tmp/.X11-unix
-        sudo chmod 1777 /tmp/.X11-unix
-        sudo chown root /tmp/.X11-unix
+        # mkdir /tmp/.X11-unix
+        # sudo chmod 1777 /tmp/.X11-unix
+        # sudo chown root /tmp/.X11-unix
     - name: Xvfb -help
       run: |
         Xvfb -help
