--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 
 [tox]
 envlist = 
-      # py311 # TODO
+      py311
       py310
       py39
       py38
@@ -11,7 +11,7 @@ envlist =
 
 # Workaround for Vagrant
 #toxworkdir={toxinidir}/.tox # default
-toxworkdir={homedir}/.tox/pyvirtualdisplay
+toxworkdir={env:HOME}/.tox/pyvirtualdisplay
 
 [testenv]
 changedir=tests
