--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,7 +68,7 @@ jobs:
       run: |
         cd tests
         pytest -v .
-    - name: Lint
-      if: matrix.os == 'ubuntu-20.04'
-      run: |
-        ./lint.sh
+    # - name: Lint
+    #   if: matrix.os == 'ubuntu-20.04'
+    #   run: |
+    #     ./lint.sh
