--- a/tox.ini
+++ b/tox.ini
@@ -6,8 +6,8 @@ envlist =
       py39
       py38
       py37
-      py310-doc
-      py310-lint
+      ; py310-doc
+      ; py310-lint
 
 # Workaround for Vagrant
 #toxworkdir={toxinidir}/.tox # default
