--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,7 @@ jobs:
           - "3.9"
           - "3.10"
           - "3.11"
+          - "3.12"
         include:
           - python-version: "3.6"
             os: ubuntu-20.04
@@ -35,6 +36,8 @@ jobs:
           - python-version: "3.10"
             os: ubuntu-20.04
           - python-version: "3.11"
+            os: ubuntu-20.04
+          - python-version: "3.12"
             os: ubuntu-20.04
     steps:
     - uses: actions/checkout@v3
